[project]
name = "cda-case2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "seaborn>=0.12.2",
    "setuptools>=68.0.0",
]
